# tiptoe-rs

./: .gitignore  Cargo.toml  OPTIMIZATIONS.md  README.md
src/: client.rs  clustering.rs  database.rs  embedding.rs  embeddings.rs  encoding.rs  error.rs  lib.rs  market_data.rs  network.rs  server.rs  utils.rs
src/python/: stocks.py
