[package]
name = "tiptoe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
simplepir = { git = "https://github.com/0xWOLAND/simplepir-rs" }
anyhow = "1.0"
candle = { package = "candle-core", version = "0.3" }
candle-nn = "0.3"
candle-transformers = "0.3"
hf-hub = "0.3"
tokenizers = "0.13"
serde_json = "1.0"
nalgebra = "0.32"