[package]
name = "tiptoe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
simplepir = { git = "https://github.com/0xWOLAND/simplepir-rs" }
candle = { package = "candle-core", version = "0.3" }
candle-nn = "0.3"
candle-transformers = "0.3"
hf-hub = "0.3"
tokenizers = "0.13"
serde_json = "1.0"
nalgebra = "0.32"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
axum = "0.8.1"
async-trait = "0.1.86"
axum-server = "0.7.1"
rand = "0.9.0"
thiserror = "2.0.11"
anyhow = "1.0.95"


[dev-dependencies]
strsim = "0.11.1"

[[bin]]
name = "encoding_server"
path = "src/bin/encoding_server.rs"

[[bin]]
name = "embedding_server"
path = "src/bin/embedding_server.rs"
